# rag-workshop-pydata-nyc-2024

./: README.md  hello.py  main.py  pyproject.toml  test_evaluation.py  ui.py
workshop/: chunk.py  ui.py
